-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.1, Qt Creator 3.1.0-rc1
-
cbb053068ccc6399dc7a392df615cda46264cf8d
When registering a MinGW toolchain & qt version manually, Qt Creator will mark the qt version as invalid on next boot.
This is because it cannot run qmake without setting the right environment. BaseQtVersion::queryQMakeVariables has code that tries to re-run qmake in all compatible toolchains then, but the list of toolchains is still empty at this point:
QtVersionManager::updateFromInstaller is called in QtSupportPlugin::extensionsInitialized(),
while
ToolchainManager::restoreToolchains is called in ProjectExplorer::extensionsInitialized()
- relates to
-
QTCREATORBUG-10422 Error message about missing MinGW DLL when starting Creator
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-11898 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82083,3 | QtVersionManager: Only load Qt versions after the toolchains are available | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |